--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "chalk": "^5.4.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
     "tsx": "^4.19.4"
   },
   "version": "1.0.0",
